--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.8.3",
+    "convex": "^1.17.3",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
