--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "convex": "^1.17.3",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "svix": "^1.44.0"
   },
   "devDependencies": {
     "@types/node": "^20",
