--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.8.3",
+    "@monaco-editor/react": "^4.6.0",
+    "axios": "^1.7.9",
     "convex": "^1.17.3",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "svix": "^1.44.0"
+    "svix": "^1.44.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
